added forms for creating bug reports, feature requests

--- a/quality_control/templates/quality_control/bug_list.html
+++ b/quality_control/templates/quality_control/bug_list.html
@@ -2,6 +2,9 @@
 
 {% block content %}
     <h1>Список отчетов об ошибках</h1>
+
+    <p><a href="{% url 'quality_control:new_bug' %}">Добавить новый отчет об ошибках</a></p>
+
     <ul>
         {% for bug in bug_list %}
             <li><a href="{% url 'quality_control:bug_detail' bug.id %}">{{ bug.title }}</a> - {{ bug.status }}</li>
