--- a/quality_control/templates/quality_control/feature_list.html
+++ b/quality_control/templates/quality_control/feature_list.html
@@ -2,6 +2,9 @@
 
 {% block content %}
     <h1>Список запросов на улучшение</h1>
+
+    <p><a href="{% url 'quality_control:new_bug' %}">Добавить новый запрос на улучшение</a></p>
+
     <ul>
         {% for feature in feature_list %}
             <li><a href="{% url 'quality_control:feature_id_detail' feature.id %}">{{ feature.title }}</a> - {{ feature.status }}</li>
