--- a/tasks/templates/tasks/task_detail.html
+++ b/tasks/templates/tasks/task_detail.html
@@ -1,15 +1,12 @@
 {% extends 'base/base.html' %}
 
 {% block content %}
-    <h1>{{ project.name }}</h1>
-    <p>{{ project.description }}</p>
+    <a href="{% url 'tasks:update_task' project_id=task.project.id task_id=task.id %}">Изменить задачу</a>
 
-    <h2>Задачи в проекте</h2>
-    <ul>
-        {% for task in project.tasks.all %}
-            <li><a href="{% url 'tasks:task_detail' project.id task.id %}">{{ task.name }}</a> - {{ task.status }}</li>
-        {% empty %}
-            <li>В этом проекте пока нет задач.</li>
-        {% endfor %}
-    </ul>
+    <!-- Кнопка удаления задачи -->
+    <p><a href="{% url 'tasks:delete_task' project_id=task.project.id task_id=task.id %}" onclick="return confirm('Вы уверены, что хотите удалить эту задачу?');">Удалить задачу</a></p>
+
+    <h1>{{ task.name }}</h1>
+
+    <p>{{ task.description }}</p>
 {% endblock %}
