--- a/quality_control/templates/quality_control/bug_detail.html
+++ b/quality_control/templates/quality_control/bug_detail.html
@@ -4,6 +4,10 @@
     <h1>{{ bug.title }}</h1>
     <p>{{ bug.description }}</p>
 
+    <p><a href="{% url 'quality_control:bug_update' bug.id %}">Изменить отчет об ошибках</a></p>
+
+    <p><a href="{% url 'quality_control:delete_bug' bug.id %}" onclick="return confirm('Вы уверены, что хотите удалить этот отчет об ошибках?');">Удалить отчет об ошибках</a></p>
+
     <p>Статус: {{ bug.status }}</p>
     <p>Приоритет: {{ bug.priority }}</p>
     <p>Связанный проект: {{ bug.project }}</p>
